--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "2.1.8",
     "reactotron-react-js": "^3.3.1",
     "reactotron-redux": "^3.1.1",
+    "reactotron-redux-saga": "^4.2.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.3"
   },
